--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </div>
 
     <div id="popup">
-        <img src="https://i.postimg.cc/FzCg2kdZ/S-25944071.jpg" class="flower-img">
-        <h2 style="color: #ff4d6d;">For You! 💐</h2>
-        <p>ยิ้มเก่งจัง มีรางวัลมาให้ฟังค่ะ 😊</p>
+        <img src="https://i.postimg.cc/XYVJmN6b/Gemini-Generated-Image-love7ylove7ylove.png">
+        <h2 style="color: #ff4d6d;">𝖿𝗈𝗋 𝗒𝗈𝗎! 💐</h2>
+        <p>ยิ้มหวานเกิ้น มีรางวัลมาให้ฟังคับบ(^o^)</p>
         <img src="https://i.postimg.cc/PrKB5SYk/S-25944070.jpg" class="spotify-img">
         <br>
         <button onclick="location.reload()">เล่นอีกรอบ</button>
@@ -112,7 +112,7 @@
             if (!isUnlocked) {
                 gift.classList.add('shake');
                 setTimeout(() => gift.classList.remove('shake'), 500);
-                statusText.innerText = "ยิ้มหวานๆ ให้กล่องหน่อยนะ 😊";
+                statusText.innerText = "ยิ้มหวานๆ ให้กล้องหน่อยคับ(⁠•⁠‿⁠•⁠)";
                 if (!isCameraStarted) startCamera();
             } else {
                 gift.innerText = "📦✨";
@@ -141,3 +141,4 @@
     </script>
 </body>
 </html>
+
