--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gift for You 😊</title>
-    
+    <title>for p.Bam</title>
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500&display=swap" rel="stylesheet">
     
@@ -100,8 +99,8 @@
     <div id="popup">
         <img src="https://i.postimg.cc/XYVJmN6b/Gemini-Generated-Image-love7ylove7ylove.png" class="flower-img">
         <h2 style="color: #ff4d6d; margin: 10px 0;">𝖿𝗈𝗋 𝗒𝗈𝗎! 💐</h2>
-        <p style="margin: 5px 0;">ยิ้มหวานเกิ้น มีรางวัลมาให้ฟังคับบ(^o^)</p>
-        <img src="https://i.postimg.cc/PrKB5SYk/S-25944070.jpg" class="spotify-img">
+        <p style="margin: 5px 0;">ยิ้มหวานเกิ้น มีเพลงมาให้ฟังคับบ(^o^)</p>
+        <img src="https://https://i.postimg.cc/K8CgVkx4/S-25944072.jpg">
         <button onclick="location.reload()">เล่นอีกรอบ</button>
     </div>
 
@@ -117,12 +116,12 @@
         async function init() {
             const MODEL_URL = 'https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js@master/weights';
             try {
-                statusText.innerText = "กำลังโหลด AI... ✨";
+                statusText.innerText = "รอแปปปป✨";
                 await faceapi.nets.tinyFaceDetector.loadFromUri(MODEL_URL);
                 await faceapi.nets.faceExpressionNet.loadFromUri(MODEL_URL);
-                statusText.innerText = "กดที่กล่องเพื่อเริ่มความลับ... 🎁";
+                statusText.innerText = "กดเพื่อเปิดคับ🎁";
             } catch (e) {
-                statusText.innerText = "โหลด AI ล้มเหลว กรุณารีเฟรช";
+                statusText.innerText = "โหลดಥ⁠╭⁠╮⁠ಥล้มเหลว รีเฟรชหน่อยคับ";
                 console.error(e);
             }
         }
@@ -134,7 +133,7 @@
                 isCameraStarted = true;
                 detectSmile();
             } catch (err) {
-                statusText.innerText = "อนุญาตกล้องด้วยนะคนดี";
+                statusText.innerText = "อนุญาตกล้องด้วยนะคับพี่แบม";
             }
         }
 
@@ -156,9 +155,9 @@
                     const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions()).withFaceExpressions();
                     if (detections.length > 0) {
                         const happiness = detections[0].expressions.happy;
-                        if (happiness > 0.5) {
+                        if (happiness > 0.3) {
                             isUnlocked = true;
-                            statusText.innerText = "ปลดล็อคแล้ว! กดที่กล่องอีกครั้งสิ ✨";
+                            statusText.innerText = "ปลดล็อคแล้ว! กดเปิดเลยครับ ✨";
                             lockIcon.style.display = 'block';
                             gift.style.transform = "scale(1.2)";
                         }
@@ -171,3 +170,4 @@
     </script>
 </body>
 </html>
+
