--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <img src="https://i.postimg.cc/XYVJmN6b/Gemini-Generated-Image-love7ylove7ylove.png" class="flower-img">
         <h2 style="color: #ff4d6d; margin: 10px 0;">𝖿𝗈𝗋 𝗒𝗈𝗎! 💐</h2>
         <p style="margin: 5px 0;">ยิ้มหวานเกิ้น มีเพลงมาให้ฟังคับบ(^o^)</p>
-        <img src="https://postimg.cc/k2F4R5Vd">
+        <img src="https://i.postimg.cc/m29gpdXm/89494.jpg">
         <button onclick="location.reload()">เล่นอีกรอบ</button>
     </div>
 
@@ -141,7 +141,7 @@
             if (!isUnlocked) {
                 gift.classList.add('shake');
                 setTimeout(() => gift.classList.remove('shake'), 500);
-                statusText.innerText = "ยิ้มหวานๆ ให้กล่องหน่อยคับ(⁠•⁠‿⁠•⁠)";
+                statusText.innerText = "ยิ้มหวานๆ ให้กล้องหน่อยคับ(⁠•⁠‿⁠•⁠)";
                 if (!isCameraStarted) startCamera();
             } else {
                 gift.innerText = "📦✨";
@@ -170,5 +170,6 @@
     </script>
 </body>
 </html>
+
 
 
