--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <img src="https://i.postimg.cc/XYVJmN6b/Gemini-Generated-Image-love7ylove7ylove.png" class="flower-img">
         <h2 style="color: #ff4d6d; margin: 10px 0;">𝖿𝗈𝗋 𝗒𝗈𝗎! 💐</h2>
         <p style="margin: 5px 0;">ยิ้มหวานเกิ้น มีเพลงมาให้ฟังคับบ(^o^)</p>
-        <img src="https://i.postimg.cc/m29gpdXm/89494.jpg">
+        <img src="https://i.postimg.cc/GpnrfYgx/89494.png">
         <button onclick="location.reload()">เล่นอีกรอบ</button>
     </div>
 
@@ -170,6 +170,7 @@
     </script>
 </body>
 </html>
+
 
 
 
