--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             if (!isUnlocked) {
                 gift.classList.add('shake');
                 setTimeout(() => gift.classList.remove('shake'), 500);
-                statusText.innerText = "ยิ้มหวานๆ ให้กล้องหน่อยคับ(⁠•⁠‿⁠•⁠)";
+                statusText.innerText = "ยิ้มให้กล้องหน่อยคับ(⁠•⁠‿⁠•⁠)";
                 if (!isCameraStarted) startCamera();
             } else {
                 gift.innerText = "📦✨";
@@ -169,4 +169,5 @@
     </script>
 </body>
 </html>
+
 
